--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,13 @@
 .container-fluid {
     padding: 0;
     margin: 0;
+    overflow: hidden;
+}
+
+body {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0px;
 }
 
 /* .wrap {
@@ -144,6 +151,7 @@ nav.navbar {
     position: absolute;
     color: rgba(149, 147, 147, 0.2);
     /* margin-left: 150px; */
+    
 }
 
 #review {
