--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
 I am using styling using min-height*/
 
 
-#our_story, #review {
+#our_story, #review, #menu, #contact {
     min-height: 600px;
 }
 
@@ -186,3 +186,126 @@ nav.navbar {
 
 
 /* End of Our Story */
+
+/* Start Menu Section */
+
+#menu {
+    background-image: url('../img/black_linen.png');
+    background-size: cover;
+    background-attachment: fixed;
+    padding-top: 40px;
+    padding-bottom: 70px;
+}
+
+#menu h1 {
+    color: #fff;
+    font-family: 'lobster', cursive;
+    font-size: 6em;
+    text-shadow: 1px 1px 5px #0a0a0a;
+}
+
+#menu h3 {
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 2em;
+}
+
+#menu a {
+    color: #f8512f;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+#menu p {
+    text-align: justify;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+}
+
+.food {
+    background-color: #fff;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#menu .nav li a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-color: transparent;
+}
+
+#menu .nav-justified li a {
+    margin-bottom: -5px;
+}
+
+#menu .nav=tabs li a {
+    border: none;
+}
+
+/* End of Menu Section */
+
+/* Start of Contact Section */
+
+.contact_form {
+    background-color: #ff6633;
+    color: #fff;
+    border: 1px solid #fff;
+}
+
+.contact_form form {
+    padding: 5% 0;
+}
+
+.contact_form span {
+    color: #ff0d06;
+}
+
+form span::after {
+    content: '*';
+}
+
+#contact {
+    background-color: #f8512f;
+}
+
+#contact h1 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    color: #fff;
+    font-size: 4em;
+}
+
+#contact p {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    color: #fff;
+    font-size: 1em;
+}
+
+#contact_fine_print {
+    font-size: 12px !important;
+    text-align: center;
+}
+
+address {
+    color: #fff;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+}
+
+.contact_bottom {
+    margin-top: 50px;
+    margin-bottom: 25px;
+}
+
+@media (max-width: 768px) {
+    .story_year {
+        font-size: 160px;
+    }
+}
+
+
+
+
+/* End of Contact Section */
